Fixed campusTour.java causing crash when activity changed. Campus tour now has google map with location change listener. Trial geofence around Hanson Hall, toasts message when inside geofence. Added XML parsing class. Began work on xml parsing code.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,13 @@
         <activity android:name=".CampusMap"
             android:label="Campus Map"/>
 
+        <activity android:name=".AugustanaCampusTour"
+            android:label="Campus Tour"/>
+
+        <activity android:name=".EventsCalendar"
+            android:label="Events Calendar"/>
+
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
