I have added the code needed to allow Parse to work on the app.  I had to commit out code in the EventsCalendar.java and DownloadXMLTask.java to get the app running.  The UseParse.java is the only java file I added that is needed to help Parse run.  I made changes in the android manifest and some other files that contain properities for the app.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,5 +22,9 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.0.0'
-    compile 'com.google.android.gms:play-services:7.0.0'
+    compile 'com.google.android.gms:play-services:6.5.87'
+    //Added dependency for parse
+    compile 'com.parse.bolts:bolts-android:1.+'
+    compile fileTree(dir: 'libs', include: 'Parse-*.jar')
+    compile files('libs/Parse-1.9.1.jar')
 }
