--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,9 @@
         <activity android:name=".EventsCalendar"
             android:label="Events Calendar"/>
 
+        <activity android:name=".BuildingInformationScreen"
+            android:label="Building Information"/>
+
 
         <meta-data
             android:name="com.google.android.gms.version"
