--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.parse.bolts:bolts-android:1.+'
     compile fileTree(dir: 'libs', include: 'Parse-*.jar')
     compile files('libs/Parse-1.9.1.jar')
+    compile files('libs/jsoup-1.8.2.jar')
 }
