--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "edu.augustana.csc490.vikinghub"
+        applicationId "com.example.andrewshearouse11.nongameapp"
         minSdkVersion 15
         targetSdkVersion 21
         versionCode 1
