--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.andrewshearouse11.nongameapp" >
+    package="edu.augustana.csc490.vikinghub" >
 
     <!-- required parse -->
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme"
         android:name=".UseParse">
         <activity
-            android:name=".MainActivity"
+            android:name="edu.augustana.csc490.vikinghub.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,16 +22,16 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".CampusMap"
+        <activity android:name="edu.augustana.csc490.vikinghub.CampusMap"
             android:label="Campus Map"/>
 
-        <activity android:name=".AugustanaCampusTour"
+        <activity android:name="edu.augustana.csc490.vikinghub.AugustanaCampusTour"
             android:label="Campus Tour"/>
 
-        <activity android:name=".EventsCalendar"
+        <activity android:name="edu.augustana.csc490.vikinghub.EventsCalendar"
             android:label="Events Calendar"/>
 
-        <activity android:name=".BuildingInformationScreen"
+        <activity android:name="edu.augustana.csc490.vikinghub.BuildingInformationScreen"
             android:label="Building Information"/>
 
 
